@@ -234,6 +234,28 @@ name|util
 operator|.
 name|concurrent
 operator|.
+name|Callable
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|ExecutorService
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
 name|Future
 import|;
 end_import
@@ -1485,6 +1507,98 @@ name|OnReconnect
 argument_list|>
 argument_list|()
 decl_stmt|;
+DECL|class|RegisterCoreAsync
+specifier|private
+class|class
+name|RegisterCoreAsync
+implements|implements
+name|Callable
+block|{
+DECL|field|descriptor
+name|CoreDescriptor
+name|descriptor
+decl_stmt|;
+DECL|field|recoverReloadedCores
+name|boolean
+name|recoverReloadedCores
+decl_stmt|;
+DECL|field|afterExpiration
+name|boolean
+name|afterExpiration
+decl_stmt|;
+DECL|method|RegisterCoreAsync
+name|RegisterCoreAsync
+parameter_list|(
+name|CoreDescriptor
+name|descriptor
+parameter_list|,
+name|boolean
+name|recoverReloadedCores
+parameter_list|,
+name|boolean
+name|afterExpiration
+parameter_list|)
+block|{
+name|this
+operator|.
+name|descriptor
+operator|=
+name|descriptor
+expr_stmt|;
+name|this
+operator|.
+name|recoverReloadedCores
+operator|=
+name|recoverReloadedCores
+expr_stmt|;
+name|this
+operator|.
+name|afterExpiration
+operator|=
+name|afterExpiration
+expr_stmt|;
+block|}
+DECL|method|call
+specifier|public
+name|Object
+name|call
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"Registering core {} afterExpiration? {}"
+argument_list|,
+name|descriptor
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|afterExpiration
+argument_list|)
+expr_stmt|;
+name|register
+argument_list|(
+name|descriptor
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|descriptor
+argument_list|,
+name|recoverReloadedCores
+argument_list|,
+name|afterExpiration
+argument_list|)
+expr_stmt|;
+return|return
+name|descriptor
+return|;
+block|}
+block|}
 DECL|method|ZkController
 specifier|public
 name|ZkController
@@ -1914,6 +2028,22 @@ operator|!=
 literal|null
 condition|)
 block|{
+name|ExecutorService
+name|executorService
+init|=
+operator|(
+name|cc
+operator|!=
+literal|null
+operator|)
+condition|?
+name|cc
+operator|.
+name|getCoreZkRegisterExecutorService
+argument_list|()
+else|:
+literal|null
+decl_stmt|;
 for|for
 control|(
 name|CoreDescriptor
@@ -1935,6 +2065,31 @@ argument_list|(
 name|descriptor
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|executorService
+operator|!=
+literal|null
+condition|)
+block|{
+name|executorService
+operator|.
+name|submit
+argument_list|(
+operator|new
+name|RegisterCoreAsync
+argument_list|(
+name|descriptor
+argument_list|,
+literal|true
+argument_list|,
+literal|true
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
 name|register
 argument_list|(
 name|descriptor
@@ -1949,6 +2104,7 @@ argument_list|,
 literal|true
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 catch|catch
 parameter_list|(
