@@ -660,6 +660,19 @@ argument_list|,
 literal|null
 argument_list|)
 decl_stmt|;
+DECL|method|getCoreZkRegisterExecutorService
+specifier|public
+name|ExecutorService
+name|getCoreZkRegisterExecutorService
+parameter_list|()
+block|{
+return|return
+name|zkSys
+operator|.
+name|getCoreZkRegisterExecutorService
+argument_list|()
+return|;
+block|}
 DECL|method|getRequestHandler
 specifier|public
 name|SolrRequestHandler
