@@ -1399,6 +1399,16 @@ expr_stmt|;
 block|}
 block|}
 block|}
+DECL|method|getCoreZkRegisterExecutorService
+specifier|public
+name|ExecutorService
+name|getCoreZkRegisterExecutorService
+parameter_list|()
+block|{
+return|return
+name|coreZkRegister
+return|;
+block|}
 block|}
 end_class
 end_unit
